PyMaker/datas/object2/RawHTML/i8101/Python_DOC_referPages.how-to-load-csv-data-in-python-3-using-jupyter.txt
<div class="post-text" itemprop="text">
<p>I am trying to import data from a <code>csv</code> file using Jupyter. I am new to Python.
It works fine in IDLE, but not in Jupyter. </p>
<pre><code>import csv
with open("mpg.txt","r") as mpgFile:
    mpgFileReader = csv.reader(mpgFile)
    mpgList = []
    for row in mpgFileReader:
        if len (row)!=0:
            mpgList = mpgList + [row]
mpgFile.close()
print(mpgList)
</code></pre>
<hr/>
<h3>This is the error I receive</h3>
<pre><code>---------------------------------------------------------------------------
FileNotFoundError                         Traceback (most recent call last)
&lt;ipython-input-60-42823a11b1d0&gt; in &lt;module&gt;()
      1 import csv
----&gt; 2 with open("mpg.txt","r") as mpgFile:
      3     mpgFileReader = csv.reader(mpgFile)
      4     mpgList = []
      5     for row in mpgFileReader:

FileNotFoundError: [Errno 2] No such file or directory: 'mpg.txt'
</code></pre>
<p>I also tried to specify the full path of the file: </p>
<pre><code>"C:\Users\serdi\Documents\Test\mpg.txt"
</code></pre>
<p>But then it gives me another error:</p>
<pre><code>  File "&lt;ipython-input-61-fed3bca4876a&gt;", line 2
    with open("C:\Users\serdi\Documents\Test\mpg.txt","r") as mpgFile:
             ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The original problem is likely as you surmised, namely the path is incorrect.  However the second error is due to the <code>\</code> in the 
<code>"C:\Users\serdi\Documents\Test\mpg.txt"</code>  The <code>\</code> is an escape.  There are at least three alternatives.</p>
<p><strong>Use a raw string:</strong></p>
<pre><code>with open(r"C:\Users\serdi\Documents\Test\mpg.txt","r") as mpgFile:
</code></pre>
<p>note the <code>r</code> in front of the string.</p>
<p><strong>Escape the <code>\</code>:</strong></p>
<pre><code>with open("C:\\Users\\serdi\\Documents\\Test\\mpg.txt","r") as mpgFile:
</code></pre>
<p><strong>Use '/' instead of <code>\</code>:</strong></p>
<pre><code>with open("C:/Users/serdi/Documents/Test/mpg.txt","r") as mpgFile:
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>I used ("C:\Users\JOHN-PC\Videos\ml-twitter-sentiment-analysis-develop\data\twitter_train.csv") for load twitter data set. I always got problem  in python 3 .</p>
</div>
<span class="comment-copy">Awesome!!! Thank you @Stephen</span>
<span class="comment-copy">You can include <code>Pathlib</code></span>
<span class="comment-copy">@pylang, how does pathlib help with the munged string?</span>
<span class="comment-copy">You can include <code>Pathlib.Path</code>, improved in Python 3.6 <a href="https://docs.python.org/3/whatsnew/3.6.html#pep-519-adding-a-file-system-path-protocol" rel="nofollow noreferrer">docs.python.org/3/whatsnew/…</a>.</span>
<span class="comment-copy">always use \\ .</span>
